--- a/account/templates/account/start.html
+++ b/account/templates/account/start.html
@@ -10,12 +10,13 @@
         </div>
 
         <div>
-            <h2><a href="/account/login">ログイン</a></h2>
+            <h2><a href="{% url 'login' %}">ログイン</a></h2>
         </div>
 
         <div>
-            <h2><a href="/account/register">ユーザ登録</a></h2>
+            <h2><a href="{% url 'register' %}">ユーザ登録</a></h2>
         </div>
 
     </body>
 </html>
+
